--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -18,5 +18,16 @@
 		<servlet-name>Jersey REST Service</servlet-name>
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
+	
+	<listener>
+	   <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
+	</listener>
+ 
+	<resource-env-ref>
+	   <resource-env-ref-name>BeanManager</resource-env-ref-name>
+	   <resource-env-ref-type>
+	      javax.enterprise.inject.spi.BeanManager
+	   </resource-env-ref-type>
+	</resource-env-ref>
 
 </web-app>
