--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,10 +5,30 @@
 	id="WebApp_ID" version="3.0">
 	<display-name>WebServices</display-name>
 
+	<servlet>
+		<servlet-name>Jersey REST Service</servlet-name>
+		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+		<init-param>
+			<param-name>com.sun.jersey.config.property.packages</param-name>
+			<param-value>br.com.services.resources</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
 	<servlet-mapping>
-		<servlet-name>javax.ws.rs.core.Application</servlet-name>
+		<servlet-name>Jersey REST Service</servlet-name>
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 
+	<listener>
+	   <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
+	</listener>
+ 
+	<resource-env-ref>
+	   <resource-env-ref-name>BeanManager</resource-env-ref-name>
+	   <resource-env-ref-type>
+	      javax.enterprise.inject.spi.BeanManager
+	   </resource-env-ref-type>
+	</resource-env-ref> 
+	
 
 </web-app>
